--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - (Aula 8) Super Trunfo</title>
+  <title>Super Trunfo</title>
   <link rel="stylesheet" href="./style.css">
+  <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/J0aoD3v/superTrunfo/main/favicon.ico">
 
 </head>
 <body>
